Add deferred responses for loading and authentication and ensure that E2E mocks are not included when building dist

--- a/app/sass/components/intro.scss
+++ b/app/sass/components/intro.scss
@@ -40,7 +40,7 @@
         width: 100%;
     }
 
-    .error-feedback {
+    .error-feedback,.notice-feedback {
         margin-top: 1em;
         text-align: center;
     }
