--- a/app/sass/theme/variables.scss
+++ b/app/sass/theme/variables.scss
@@ -13,6 +13,7 @@ $gray:                            darken($light-gray,20%);
 
 $base-accent-color:               $blue;
 $error-color:                     lighten($red,15%);
+$notice-color:                    $yellow;
 
 // body colors
 $body-bg-color:                   darken(white,10%);
