--- a/app/sass/components/intro.scss
+++ b/app/sass/components/intro.scss
@@ -8,8 +8,9 @@
     h1 {
         font-size: $login-title-font-size;
         margin-bottom: $login-title-font-size / 18;
+
         i {
-            margin-right: 0.25em;
+            margin-right: .25em;
             color: $base-accent-color;
         }
     }
@@ -19,10 +20,12 @@
         margin-bottom: $login-subtitle-font-size / 3;
     }
 
-    h1, h2 {
+    h1,
+    h2 {
         text-align: center;
+
         i {
-            margin-right: 0.2em;
+            margin-right: .2em;
         }
     }
 
@@ -32,7 +35,7 @@
     }
 
     input[type="email"] {
-        margin-bottom: 0.2em;
+        margin-bottom: .2em;
     }
 
     .view-animate {
@@ -40,7 +43,8 @@
         width: 100%;
     }
 
-    .error-feedback,.notice-feedback {
+    .error-feedback,
+    .notice-feedback {
         margin-top: 1em;
         text-align: center;
     }
