--- a/app/sass/theme/styles.scss
+++ b/app/sass/theme/styles.scss
@@ -1,7 +1,10 @@
-input[type="submit"], button {
+input[type="submit"],
+button {
+
     &.primary {
         background-color: $base-accent-color;
         color: $highlight-color;
+
         &:hover {
             background-color: darken($base-accent-color, 10%);
             color: darken($highlight-color, 10%);
@@ -16,12 +19,12 @@ input[type="submit"], button {
 input.ng-invalid {
     border-color: $error-color;
     background-color: lighten($error-color, 45%);
-    box-shadow: inset 0 1px 8px lighten($error-color, 30%), 0 0px 8px lighten($error-color, 30%);
+    box-shadow: inset 0 1px 8px lighten($error-color, 30%), 0 0 8px lighten($error-color, 30%);
 }
 
 .error-feedback {
     display: block;
-    padding: 0.5em;
+    padding: .5em;
     background-color: $error-color;
     border-radius: $base-border-radius;
     color: $body-bg-color;
@@ -29,21 +32,24 @@ input.ng-invalid {
 
 .notice-feedback {
     display: block;
-    padding: 0.5em;
+    padding: .5em;
     background-color: $notice-color;
     border-radius: $base-border-radius;
     color: $body-color;
 }
 
 .select {
+
     button {
-        border-radius: 0.45em;
+        border-radius: .45em;
+
         &:focus {
             outline: 0;
         }
     }
+
     ul {
-        border-radius: 0.3em;
-        @include css-triangle(0.5em, $filter-list-border-width, $filter-list-border-color, top, $filter-list-bg-color);
+        border-radius: .3em;
+        @include css-triangle(.5em, $filter-list-border-width, $filter-list-border-color, top, $filter-list-bg-color);
     }
 }
