Add unit tests for the available filter controller

--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -3,13 +3,13 @@
         <span>{{ header.title }}</span>
     </div>
     <div class="search ng-hide" ng-show="header.loaded">
-        <i class="icon fa-search"></i>
+        <i class="fa fa-search"></i>
         <input type="text" placeholder="Search" ng-model="header.query" ng-change="header.search()">
     </div>
 </header>
 <aside class="ng-hide" ng-controller="MenuCtrl as menu" ng-show="menu.loaded">
     <ul class="modules">
-        <li ng-repeat="module in menu.modules" title="{{module.title}}" ng-class="{true: 'active'}[module.active]"><i class="icon {{module.id | lowercase}}"></i></li>
+        <li ng-repeat="module in menu.modules" title="{{module.title}}" ng-class="{true: 'active'}[module.active]"><i class="fa {{module.id | lowercase}}"></i></li>
     </ul>
     <h1>{{menu.activeModuleName}}</h1>
     <ul class="sections">
