Add the retrieval of story books and the application of a set filter to the available section

--- a/app/views/runner/available.html
+++ b/app/views/runner/available.html
@@ -1,1 +1,4 @@
 <div ng-include="'views/runner/filter.html'" include-replace></div>
+<ul class="main-content-list">
+    <li ng-repeat="book in available.storyBooks | storyBookSet:available.filterKeys.sets">{{ book.title }}</li>
+</ul>
