--- a/app/views/runner/filter.html
+++ b/app/views/runner/filter.html
@@ -3,7 +3,7 @@
         <i class="fa fa-chevron-right"></i>
         <span translate="RUNNER.AVAILABLE.FILTER.BEFORE_SET"></span>
     </span>
-    <div class="select" filter-select="filter.sets" filter-id="tagFilter"></div>
+    <div class="select" filter-select="filter.sets" filter-id="available.setFilterId"></div>
     <span translate="RUNNER.AVAILABLE.FILTER.BEFORE_TAG"></span>
-    <div class="select" filter-select="filter.tags" filter-id="setFilter"></div>
+    <div class="select" filter-select="filter.tags" filter-id="available.tagFilterId"></div>
 </div>
