--- a/app/sass/theme/variables.scss
+++ b/app/sass/theme/variables.scss
@@ -81,3 +81,4 @@ $filter-list-button-max-width:    14em;
 $filter-list-button-min-width:    10em;
 $filter-list-button-bg-color:     $body-bg-color;
 $filter-list-button-margin:       .3em;
+$filter-list-max-height:          12em;
