--- a/app/views/runner/available.html
+++ b/app/views/runner/available.html
@@ -1,4 +1,9 @@
 <div ng-include="'views/runner/filter.html'" include-replace></div>
 <ul class="main-content-list">
-    <li ng-repeat="book in available.storyBooks | storyBookSet:available.filterKeys.sets">{{ book.title }}</li>
+    <li ng-repeat="book in available.storyBooks | storyBookSet:available.filterKeys.sets">
+        <div>{{ book.title }}</div>
+        <ul>
+            <li ng-repeat="story in book.stories | storySet:available.filterKeys.sets">{{ story.title }}</li>
+        </ul>
+    </li>
 </ul>
